LU-9394 osd: __osd_obj2dnode() to return negative errors

DMU/ZFS uses positive values, Lustre negatives..

Change-Id: I3615fac1616d6647897c68ef94f298b356e508d1
Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-on: https://review.whamcloud.com/26893
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>